--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,5 @@ Imports:
     lubridate,
     xts
 RoxygenNote: 7.2.3
+URL: https://github.com/jwilliman/cgmMetrics
+BugReports: https://github.com/jwilliman/cgmMetrics/issues
