--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Imports:
 RoxygenNote: 7.2.3
 URL: https://github.com/jwilliman/cgmMetrics
 BugReports: https://github.com/jwilliman/cgmMetrics/issues
+Depends: 
+    R (>= 2.10)
