--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,9 +11,8 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
     data.table,
-    Hmisc,
     lubridate,
-    xts
+    clock
 RoxygenNote: 7.3.2
 URL: https://github.com/jwilliman/cgmMetrics
 BugReports: https://github.com/jwilliman/cgmMetrics/issues
